--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "is-empty": "^1.2.0",
     "jquery": "^3.2.1",
+    "lower-case": "^1.1.4",
     "random-item-in-array": "^1.0.0",
-    "telegraf": "^3.9.0"
+    "telegraf": "^3.9.0",
+    "whitespace-split": "^1.0.0"
   }
 }
