--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "telegram-markov",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "A Markov Chain bot for Telegram.",
   "main": "main.js",
   "dependencies": {
     "is-empty": "^1.2.0",
     "jquery": "^3.2.1",
+    "load-json-file": "^2.0.0",
     "lower-case": "^1.1.4",
     "random-item-in-array": "^1.0.0",
-    "telegraf": "^3.9.0",
-    "whitespace-split": "^1.0.0"
-  }
+    "save": "^2.3.1",
+    "whitespace-split": "^1.0.0",
+    "telegraf": "^3.9.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Ignis Incendio",
+  "license": "ISC"
 }
